--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -5,17 +5,23 @@ on: [push]
 
 jobs:
   test-lint:
-    name: Test and lint
+    name: Test and Lint
     runs-on: ubuntu-20.04
     steps:
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Checkout
-        uses: actions/checkout@v2
+
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test"
+
       - name: Lint
         run: docker-compose run --rm app sh -c "flake8"
